--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: "Clash Grotesk";
-  src: url("../fonts/ClashGrotesk/ClashGrotesk-Regular.woff2") format("woff2"), url("../fonts/ClashGrotesk/ClashGrotesk-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
 body {
   font-family: "Clash Grotesk", sans-serif;
 }
@@ -29,7 +22,7 @@ ul {
 }
 .head p {
   text-align: center;
-  font-size: 13px;
+  font-size: 14px;
 }
 .head p span {
   border-radius: 20px;
@@ -42,8 +35,8 @@ ul {
 .hr-dashed {
   border-top: 1px dashed #A3A3A3;
   opacity: 1;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 .footer {
@@ -54,15 +47,20 @@ ul {
   font-size: 1.2rem;
   line-height: 1.3;
 }
+.footer .subscribe {
+  border-bottom: 1px solid #141414;
+}
 .footer .subscribe input {
-  border-right: none;
+  border: none !important;
 }
 .footer .subscribe input:focus {
   box-shadow: none;
 }
 .footer .subscribe button {
-  border-radius: 0;
-  font-weight: bold;
+  border-top-left-radius: 8px !important;
+  border-bottom-left-radius: 8px !important;
+  border-radius: 8px;
+  padding: 0 15px;
 }
 .footer .social-icons a {
   display: inline-block;
@@ -89,4 +87,16 @@ ul {
 }
 .footer .dropdown-toggle::after {
   margin-left: 0.4rem;
+}
+.footer .loowerfoorer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 1220px) {
+  .md-w-75 {
+    width: 75%;
+  }
 }/*# sourceMappingURL=style.css.map */
