--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,8 @@
 @import './_vriable';
+@import './mixins';
+@import './dropdown';
 @import './_base';
+@import './header';
 @import "./_hr";
-@import './_colors';
 @import './footer';
 @import './media';
