--- a/css/_media.scss
+++ b/css/_media.scss
@@ -2,4 +2,17 @@
   .md-w-75 {
     width: 75%;
   }
+
+}
+@media (min-width:750px) {
+ .widthauto{
+  width: auto;
+ }
+  
+}
+@media (max-width:749px) {
+ .widthauto{
+  width: 100%;
+ }
+  
 }
