--- a/css/_vriable.scss
+++ b/css/_vriable.scss
@@ -1,3 +1,15 @@
-$white_color:#fff;
-$black_color:#000;
+
 $href:#8F8F8F;
+$black-color: #000;
+$white-color: #fff;
+$gray-color: #525252;
+$light-gray-color: #f5f5f5;
+$semi-blue-color: #3A6A90;
+$brown-color: #5a3e2b;
+$highlight-color: #FFA439;
+$hover-shadow-color: rgba(0, 0, 0, 0.08);
+$border-gray: #ccc;
+$dark-bg: #383838;
+$breadcrumb-active: #292929;
+$review-border: #A3A3A3;
+$progress-bg: #e9ecef;
