--- a/css/_base.scss
+++ b/css/_base.scss
@@ -7,7 +7,6 @@ body {
   margin: 0;
 }
 
-
 ul {
   padding: 0;
   list-style-type: none;
@@ -18,14 +17,18 @@ a {
   font-weight: 500;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 .bi-star-fill {
-  color: #FFA439;
+  color: $highlight-color;
 }
 
 .head {
   @include flex-center;
-  background: $black_color;
-  color: $white_color;
+  background: $black-color;
+  color: $white-color;
   padding: 10px 0;
 
   p {
@@ -35,12 +38,11 @@ a {
     span {
       border-radius: 20px;
       font-size: 14px;
-      background: #383838;
+      background: $dark-bg;
       padding: 2px 15px;
       margin: 0 5px;
     }
   }
-
 }
 
 .breadcrumb-item {
@@ -49,9 +51,8 @@ a {
   }
 
   &.active {
-    color: #292929;
+    color: $breadcrumb-active;
     font-weight: 500;
-
   }
 }
 
@@ -66,14 +67,13 @@ a {
     object-fit: cover;
     border-radius: 6px;
     cursor: pointer;
-
   }
 
   .color-box {
     width: 70px;
     height: 40px;
     border-radius: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid $border-gray;
     @include flex-center;
     cursor: pointer;
 
@@ -82,29 +82,28 @@ a {
       height: 100%;
       border-radius: 6px;
       @include transition(width);
-
     }
 
     &.active {
       padding: 5px;
-      border: 2px solid #000;
+      border: 2px solid $black-color;
       box-sizing: border-box;
     }
 
     .bg-brown {
-      background-color: #5a3e2b;
+      background-color: $brown-color;
     }
 
     .bg-light {
-      background-color: #f5f5f5;
+      background-color: $light-gray-color;
     }
 
     .bg-semiblue {
-      background-color: #3A6A90;
+      background-color: $semi-blue-color;
     }
 
     .bg-dark {
-      background-color: #000;
+      background-color: $black-color;
     }
   }
 
@@ -112,36 +111,31 @@ a {
     width: 68px;
     height: 40px;
     border-radius: 8px;
-    color: #525252;
+    color: $gray-color;
     cursor: pointer;
 
     &.active {
-      color: $black_color;
-      border-color: #000;
+      color: $black-color;
+      border-color: $black-color;
     }
   }
-
-
-
 }
-
 
 .related-products {
   .products-wrapper {
     display: grid;
-    gap: 1rem;
-    // 2 columns on mobile
+    gap: 0.5rem;
     grid-template-columns: repeat(2, 1fr);
+ grid-template-columns: repeat(2, 1fr);
 
-    // 3 columns from 768px up
     @include minmedia(768) {
       grid-template-columns: repeat(3, 1fr);
     }
 
-    // 4 columns on larger screens
-    @include minmedia(768) {
+    @include minmedia(992) {
       grid-template-columns: repeat(5, 1fr);
     }
+  
   }
 
   .product-card {
@@ -149,7 +143,7 @@ a {
     border-radius: 10px;
 
     &:hover {
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 0 10px $hover-shadow-color;
     }
 
     img {
@@ -165,7 +159,7 @@ a {
 
 .product-reviews {
   .product-review {
-    border: 1px dashed #A3A3A3;
+    border: 1px dashed $review-border;
   }
 
   .rating-summary {
@@ -176,9 +170,9 @@ a {
       position: relative;
       width: 80px;
       height: 80px;
-      border: 5px solid #FFA439;
+      border: 5px solid $highlight-color;
       @include rounded();
-      background: #fff;
+      background: $white-color;
 
       .circle-progress {
         @include flex-center;
@@ -193,7 +187,7 @@ a {
   }
 
   .progress {
-    background-color: #e9ecef;
+    background-color: $progress-bg;
     border-radius: 10px;
     height: 10px;
     margin: 0 5px;
@@ -205,7 +199,14 @@ a {
   }
 }
 
-// Apply to dropdown component
+html[dir="rtl"] {
+  .breadcrumb-item + .breadcrumb-item::before {
+    float: right;
+    padding-left: var(--bs-breadcrumb-item-padding-x);
+    padding-right: var(--bs-breadcrumb-item-padding-x);
+  }
+}
+
 .custom-dropdown {
   @include dropdown-base;
 }
