--- a/css/_dropdown.scss
+++ b/css/_dropdown.scss
@@ -31,7 +31,7 @@
     top: 100%;
     left: 0;
     z-index: 10;
-    background: #fff;
+    background: $white-color;
     border: 1px solid #dee2e6;
     border-radius: 0.25rem;
     padding: 0.25rem 0;
