--- a/css/_vriable.scss
+++ b/css/_vriable.scss
@@ -3,6 +3,7 @@ $href:#8F8F8F;
 $black-color: #000;
 $white-color: #fff;
 $gray-color: #525252;
+$mute-color: #666666;
 $light-gray-color: #f5f5f5;
 $semi-blue-color: #3A6A90;
 $brown-color: #5a3e2b;
@@ -13,3 +14,4 @@ $dark-bg: #383838;
 $breadcrumb-active: #292929;
 $review-border: #A3A3A3;
 $progress-bg: #e9ecef;
+$borderline:1px solid #B8B8B8
