--- a/css/_base.scss
+++ b/css/_base.scss
@@ -17,21 +17,24 @@ a {
   font-weight: 500;
 }
 
-body, html {
+body,
+html {
   overflow-x: hidden;
 }
 
 .bi-star-fill {
   color: $highlight-color;
 }
-.text-muted{
-  color: #8F8F8F;
-    font-size: 14px;
 
-    @include minmedia(768) {
-  font-size: 16px;
+.text-muted {
+  color: #8F8F8F;
+  font-size: 14px;
+
+  @include minmedia(768) {
+    font-size: 16px;
   }
 }
+
 h2 {
   font-size: 1.25rem; // ~fs-5
 
@@ -39,18 +42,23 @@ h2 {
     font-size: 1.75rem; // ~fs-3
   }
 }
+
 h6 {
-  font-size: 13px; 
+  font-size: 13px;
 
   @include minmedia(768) {
     font-size: 1rem;
   }
 }
-.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after ,
-.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
-    content: "next";
-    display: none
+
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after,
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: "next";
+  display: none
 }
+
 .head {
   @include flex-center;
   background: $black-color;
@@ -75,9 +83,11 @@ h6 {
 .breadcrumb-item {
   a {
     color: $href;
-      font-size: 13px;
- @include minmedia(768) {
-     font-size: 16px;  }
+    font-size: 13px;
+
+    @include minmedia(768) {
+      font-size: 16px;
+    }
   }
 
   &.active {
@@ -85,24 +95,35 @@ h6 {
     font-weight: 500;
   }
 }
-.Description{
-  p{
+
+.Description {
+  p {
     color: $mute-color;
-     font-size: 14px;
+    font-size: 14px;
 
     @include minmedia(768) {
-  font-size: 16px;
-  }
+      font-size: 16px;
+    }
   }
 }
+
 .product-detail {
-  del{
+  del {
     color: $mute-color ;
   }
+
   .img-main {
     height: 500px;
-    background-color: $white-color;
   }
+
+  .swiper-slide {
+    background-color: $white-color;
+    text-align: center;
+    &.swiper-slide-active {
+      background-color: $white-color;
+    }
+  }
+
 
   .thumb-img {
     width: 60px;
@@ -110,7 +131,6 @@ h6 {
     object-fit: cover;
     border-radius: 6px;
     cursor: pointer;
-    background-color: $white-color;
 
   }
 
@@ -160,24 +180,28 @@ h6 {
     cursor: pointer;
     background: $white-color;
     border: 1px solid #E6E6E6;
+
     &.active {
       color: $black-color;
       border-color: $black-color;
     }
   }
 }
-.bordercheck{
+
+.bordercheck {
   border: $borderline;
-    @include media(500) {
-  @include margin-inline-start(2rem);
-    }
+
+  @include media(500) {
+    @include margin-inline-start(2rem);
+  }
 }
+
 .related-products {
   .products-wrapper {
     display: grid;
     gap: 0.5rem;
     grid-template-columns: repeat(2, 1fr);
- grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 
     @include minmedia(768) {
       grid-template-columns: repeat(3, 1fr);
@@ -186,7 +210,7 @@ h6 {
     @include minmedia(992) {
       grid-template-columns: repeat(5, 1fr);
     }
-  
+
   }
 
   .product-card {
@@ -207,6 +231,7 @@ h6 {
     }
   }
 }
+
 .grid-buttons {
   display: grid;
 
@@ -253,7 +278,7 @@ h6 {
     background-color: $progress-bg;
     border-radius: 10px;
     height: 10px;
-    margin: 0 5px;
+    margin: 0 15px;
 
     .progress-bar {
       @include transition(width);
@@ -263,29 +288,33 @@ h6 {
 }
 
 html[dir="ltr"] {
-  .breadcrumb-item + .breadcrumb-item::before {
+  .breadcrumb-item+.breadcrumb-item::before {
     float: left;
     padding-left: 0;
     padding-right: var(--bs-breadcrumb-item-padding-x);
   }
+
   .breadcrumb-item+.breadcrumb-item {
     padding-right: 0;
+  }
 }
-}
+
 html[dir="rtl"] {
-  .breadcrumb-item + .breadcrumb-item::before {
+  .breadcrumb-item+.breadcrumb-item::before {
     float: right;
     padding-left: var(--bs-breadcrumb-item-padding-x);
-    padding-right:0;
+    padding-right: 0;
   }
+
   .breadcrumb-item+.breadcrumb-item {
     padding-left: 0;
-}
+  }
 }
 
 .custom-dropdown {
   @include dropdown-base;
 }
+
 [dir="ltr"] .end-0 {
   right: 0 !important;
   left: auto !important;
