--- a/css/_base.scss
+++ b/css/_base.scss
@@ -117,10 +117,10 @@ h6 {
   }
 
   .swiper-slide {
-    background-color: $white-color;
+    background-color: #F2F2F2;
     text-align: center;
     &.swiper-slide-active {
-      background-color: $white-color;
+      background-color: #F2F2F2;
     }
   }
 
