--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,11 @@ h6 {
   height: 500px;
 }
 .product-detail .swiper-slide {
-  background-color: #fff;
+  background-color: #F2F2F2;
   text-align: center;
 }
 .product-detail .swiper-slide.swiper-slide-active {
-  background-color: #fff;
+  background-color: #F2F2F2;
 }
 .product-detail .thumb-img {
   width: 60px;
