--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,13 @@ h6 {
 .product-detail .img-main {
   height: 500px;
 }
+.product-detail .itemisactive.swiper-slide-active {
+  background-color: #F2F2F2;
+  width: 88% !important;
+}
 .product-detail .swiper-slide {
   background-color: #F2F2F2;
   text-align: center;
-}
-.product-detail .swiper-slide.swiper-slide-active {
-  background-color: #F2F2F2;
 }
 .product-detail .thumb-img {
   width: 60px;
