--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,12 @@ h6 {
 .Description p {
   color: #666666;
   font-size: 14px;
+  line-height: 1.6;
 }
 @media (min-width: 768px) {
   .Description p {
     font-size: 16px;
+    line-height: 1.9;
   }
 }
 
@@ -110,15 +112,17 @@ h6 {
   color: #666666;
 }
 .product-detail .img-main {
-  height: 500px;
+  height: 600px;
 }
 .product-detail .itemisactive.swiper-slide-active {
   background-color: #F2F2F2;
-  width: 88% !important;
+  width: 82% !important;
+  border-radius: 8px;
 }
-.product-detail .swiper-slide {
+.product-detail .thumbSwiper .swiper-slide {
   background-color: #F2F2F2;
   text-align: center;
+  border-radius: 8px;
 }
 .product-detail .thumb-img {
   width: 60px;
